<resources>
    <string name="app_name">FCM(A) 2.0</string>
    <string name="hello_world">Hello world!</string>

    <string name="action_connect">Connect</string>
    <string name="action_menu">Menu</string>
    <string name="action_settings">Settings</string>
    <string name="action_startStream">Start Datastream</string>
    <string name="action_bluetooth_searching">Bluetooth searching</string>
    <string name="action_about">About</string>
    <string name="action_stopStream">Stop Datastream</string>
    <string name="action_showStream">Show Streamdata</string>
    <string name="action_dataExport">Export</string>

    <!-- Bluetooth FcmBt -->
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled.</string>

    <!-- File Selector -->
    <string name="title_activity_file_selector">FlightLog auswählen</string>


    <!-- DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>


</resources>
